--- a/SCSS/sections/partials/_indexCards.scss
+++ b/SCSS/sections/partials/_indexCards.scss
@@ -2,9 +2,16 @@
     background-color: #fff;
     margin-top: -50px;
     padding: 25px;
+    
+    i{}
+
+    .btn-red{
+        background-color: #dc3545;
+        color:#fff;
+    }
+    .applyBannerColumn{
+        background-color: #707070;
+        color: #fff;
+    }
 }
 
-.applyBannerColumn{
-    background-color: #707070;
-    color: #fff;
-}
