--- a/SCSS/sections/partials/index.scss
+++ b/SCSS/sections/partials/index.scss
@@ -1,7 +1,7 @@
 @import '_nav.scss';
 @import '_parallax.scss';
 @import '_indexCards.scss';
-@import '_summary.scss';
+@import '_indexFeatures.scss';
 @import '_video.scss';
 @import '_jobs-benefits.scss';
 @import '_conversion-logo';
