--- a/SCSS/sections/partials/_indexCards.scss
+++ b/SCSS/sections/partials/_indexCards.scss
@@ -10,8 +10,10 @@
         color:#fff;
     }
     .applyBannerColumn{
-        background-color: #707070;
         color: #fff;
+        .applyBanner{
+            background-color: #707070;
+        }
     }
 }
 
