--- a/templates/index.twig
+++ b/templates/index.twig
@@ -70,7 +70,7 @@
           </div>
         </div>
         <div class="col-md-4 applyBannerColumn" style="">
-          <div class="row applyBanner py-2 mx-auto" style="">
+          <div class="row applyBanner py-2 px-1 mx-auto" style="">
             <div class="col-md-12">
               <h3 class="" contenteditable="true"><i class="fa fa-fw fa-search"></i>Find Your Next Job</h3>
               <p class="lead" style="">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.<br></p><a class="btn btn-block btn-lg btn-success" href="#"><i class="fa fa-fw fa-search"></i><i class="fa fa-fw fa-truckz"></i>FIND MY NEXT JOB</a>
@@ -86,7 +86,7 @@
 
 
   <!-- MAIN -Features -->
-  <div class="p-5 bg-light">
+  <div class="p-5">
     <div class="container indexFeatures">
       <div class="row">
         <div class="col-md-12">
