--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -1,26 +1,30 @@
-  <div class="py-5 text-center bg-dark text-white">
+  <footer class="footer">
+  <div class="py-5 text-center text-white top-footer">
     <div class="container">
       <div class="row">
         <div class="mx-auto col-md-12">
-          <h3 class="display-4">Ready to join the best carrier to boost your driving career?</h3> <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-fw fa-handshake-o"></i>TAKE ME THERE</a>
+          <h3 class="display-4">Ready to join the best carrier to boost your driving career?</h3> <a class="btn btn-success btn-lg" href="#"><i class="fa fa-fw fa-handshake-o"></i>TAKE ME THERE</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="py-3 bg-dark">
+  <div class="py-3 bg-dark bottom-footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 text-center d-md-flex align-items-center text-white">
-          <ul class="nav d-flex justify-content-center">
+        <div class="col-md-12 text-center align-items-center text-white">
+          <ul class="nav d-flex justify-content-around">
             <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-          </ul> <i class="d-block fa fa-stop-circle fa-3x mx-auto text-white" style=""></i>
-          <p class="mb-0 py-1">©2018 Pingendo All rights reserved</p>
+          
+          <li class="nav-item"> <img src="/images/conversion-logo.png" alt="" class="footer-logo"></li>
+          {# <li class="nav-item"> ©2018 Pingendo All rights reserved</li> #}
+          </ul> 
         </div>
       </div>
     </div>
   </div>
+</footer>
 
 
 <!-- WOW JS -->
