--- a/templates/index.twig
+++ b/templates/index.twig
@@ -27,44 +27,12 @@
     {% endif %}            
 {% endblock %}
    
+{% include "partials/_cards" %}
+
 
 {# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE HOME PAGE  #}
 {# UP UNTILL THE FOOTER --> #}
 {% block main %}
-
-<!--CARDS-->
-  <div class="pb-5 bg-light" style="">
-    <div class="container indexCards">
-      <div class="row pb-2">
-        <div class="col-md-4" style="">
-          <div class="row py-2 mx-auto" style="">
-            <div class="col-md-12">
-              <h3 class="text-secondary"><i class="fa fa-fw fa-user"></i>Company Drivers</h3>
-              <p class="lead">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.</p><a class="btn btn-red btn-sm" href="#"><i class="fa fa-fw fa-arrow-circle-o-right"></i><i class="fa fa-fw fa-truckz"></i>Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" style="">
-          <div class="row py-2 mx-auto" style="">
-            <div class="col-md-12">
-              <h3 class="text-secondary"><i class="fa fa-fw fa-truck"></i>Owner Operators</h3>
-              <p class="lead">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.</p><a class="btn btn-red btn-sm" href="#"><i class="fa fa-fw fa-arrow-circle-o-right"></i><i class="fa fa-fw fa-truckz"></i>Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 applyBannerColumn" style="">
-          <div class="row applyBanner py-2 px-1 mx-auto" style="">
-            <div class="col-md-12">
-              <h3 class="" contenteditable="true"><i class="fa fa-fw fa-search"></i>Find Your Next Job</h3>
-              <p class="lead" style="">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.<br></p><a class="btn btn-block btn-lg btn-success" href="#"><i class="fa fa-fw fa-search"></i><i class="fa fa-fw fa-truckz"></i>FIND MY NEXT JOB</a>
-              <h5 class="pt-3">NEED TO TALK? Call a recruiter now. 888-888-8888</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 
 
 
