--- a/templates/partials/_cards.twig
+++ b/templates/partials/_cards.twig
@@ -24,7 +24,7 @@
           <div class="row applyBanner py-2 px-1 mx-auto" style="">
             <div class="col-md-12">
               <h3 class="" contenteditable="true"><i class="fa fa-fw fa-search"></i>Find Your Next Job</h3>
-              <p class="lead" style="">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.<br></p><a class="btn btn-block btn-lg btn-success" href="#"><i class="fa fa-fw fa-search"></i><i class="fa fa-fw fa-truckz"></i>FIND MY NEXT JOB</a>
+              <p class="lead" style="">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.<br></p><a class="btn btn-block btn-lg btn-success" href="/jobs"><i class="fa fa-fw fa-search"></i><i class="fa fa-fw fa-truckz"></i>FIND MY NEXT JOB</a>
               <h5 class="pt-3">NEED TO TALK? Call a recruiter now. 888-888-8888</h5>
             </div>
           </div>
