--- a/templates/partials/_cards.twig
+++ b/templates/partials/_cards.twig
@@ -1,6 +1,6 @@
 <!--CARDS-->
   <div class="pb-5 bg-light" style="">
-    <div class="container indexCards">
+    <div class="container cards-section">
       <div class="row pb-2">
         <div class="col-md-4" style="">
           <div class="row py-2 mx-auto" style="">
