--- a/SCSS/sections/partials/index.scss
+++ b/SCSS/sections/partials/index.scss
@@ -1,6 +1,6 @@
 @import '_nav.scss';
 @import '_parallax.scss';
-@import '_indexCards.scss';
+@import '_cards-section.scss';
 @import '_indexFeatures.scss';
 @import '_video.scss';
 @import '_jobs-benefits.scss';
