--- a/templates/jobs/searchjobs/search-controller.twig
+++ b/templates/jobs/searchjobs/search-controller.twig
@@ -1,141 +1,120 @@
-  {# The styles for this controller are in the _controller.scss file under jobs folder in the SCSS Directory #}
-  <div class="container-fluid search-controller">
-      <div class="row">
-          <div class="col-8 offset-2">
-            {# SET COOKIES #}
-            {# {% if getCookie('su_return') %}
-                {% set myCookie = getCookie('su_return') %}
-                <form action="{{ url('jobs/searchjobs/results')}} ">
-            {% else %} #}
-              <form action="{{ url('jobs/searchjobs/results') }}">
-            {# {% endif %} #}
-                  {# TOP ROW #}
-                  <div class="row">
-                      {# Select Truck Type #}
-                      <div class="col-sm-12 col-md-6">
-                          <div class="form-group">
-                              <select name="trucktype" class="form-control bg-gray" id="">
-                                  <option value="">Select truck type</option>
-                                  <option value="tanker">tanker</option>
-                                  <option value="van">van</option>
-                                  <option value="reefer">reefer</option>
-                              </select>
-                          </div>
-                      </div>
-                      {# Select Job Type #}
-                      <div class="col-sm-12 col-md-6">
-                          <div class="form-group">
-                              <select name="jobtype" class="form-control bg-gray" id="">
-                                  <option value="">Select job type type</option>
-                                  <option value="otr">OTR</option>
-                                  <option value="regional">Regional</option>
-                                  <option value="dedicated">Dedicated</option>
-                                  <option value="local">Local</option>
-                              </select>
-                          </div>
-                      </div>
-                  </div>
-
-                  {# MIDDLE ROW #}
-                  <div class="row">
-                      {# SELECT STATE #}
-                      <div class="col-sm-12 col-md-3">
-                          <div class="form-group">
-                              <select name="state" class="form-control bg-gray" id="">
-                                  <option value="" selected="selected">Select a State</option>
-                                  <option value="AL">Alabama</option>
-                                  <option value="AK">Alaska</option>
-                                  <option value="AZ">Arizona</option>
-                                  <option value="AR">Arkansas</option>
-                                  <option value="CA">California</option>
-                                  <option value="CO">Colorado</option>
-                                  <option value="CT">Connecticut</option>
-                                  <option value="DE">Delaware</option>
-                                  <option value="DC">District Of Columbia</option>
-                                  <option value="FL">Florida</option>
-                                  <option value="GA">Georgia</option>
-                                  <option value="HI">Hawaii</option>
-                                  <option value="ID">Idaho</option>
-                                  <option value="IL">Illinois</option>
-                                  <option value="IN">Indiana</option>
-                                  <option value="IA">Iowa</option>
-                                  <option value="KS">Kansas</option>
-                                  <option value="KY">Kentucky</option>
-                                  <option value="LA">Louisiana</option>
-                                  <option value="ME">Maine</option>
-                                  <option value="MD">Maryland</option>
-                                  <option value="MA">Massachusetts</option>
-                                  <option value="MI">Michigan</option>
-                                  <option value="MN">Minnesota</option>
-                                  <option value="MS">Mississippi</option>
-                                  <option value="MO">Missouri</option>
-                                  <option value="MT">Montana</option>
-                                  <option value="NE">Nebraska</option>
-                                  <option value="NV">Nevada</option>
-                                  <option value="NH">New Hampshire</option>
-                                  <option value="NJ">New Jersey</option>
-                                  <option value="NM">New Mexico</option>
-                                  <option value="NY">New York</option>
-                                  <option value="NC">North Carolina</option>
-                                  <option value="ND">North Dakota</option>
-                                  <option value="OH">Ohio</option>
-                                  <option value="OK">Oklahoma</option>
-                                  <option value="OR">Oregon</option>
-                                  <option value="PA">Pennsylvania</option>
-                                  <option value="RI">Rhode Island</option>
-                                  <option value="SC">South Carolina</option>
-                                  <option value="SD">South Dakota</option>
-                                  <option value="TN">Tennessee</option>
-                                  <option value="TX">Texas</option>
-                                  <option value="UT">Utah</option>
-                                  <option value="VT">Vermont</option>
-                                  <option value="VA">Virginia</option>
-                                  <option value="WA">Washington</option>
-                                  <option value="WV">West Virginia</option>
-                                  <option value="WI">Wisconsin</option>
-                                  <option value="WY">Wyoming</option>
-                              </select>
-                          </div>
-                      </div>
-
-                      {# select city #}
-                      <div class="col-sm-12 col-md-3">
-                          <div class="form-group">
-                              <input id="city" name="city" type="text" class="form-control bg-gray"
-                                  placeholder="city" />
-                          </div>
-                      </div>
-                      <div class="col-sm-12 col-md-1">
-                          <div class="form-group">
-                        <h3 class="text-center">OR</h3>
-                        </div>
-                        </div>
-                      {# select zipcode #}
-                      <div class="col-sm-12 col-md-3">
-                          <div class="form-group">
-                              <input id="zip" name="zip" type="number" pattern="[0-9]*" class="form-control bg-gray"
-                                  placeholder="zip code" />
-                          </div>
-                      </div>
-                  </div>
-
-                  {# BOTTOM ROW #}
-                  <div class="row">
-                      {# select range #}
-                      <div class="col-sm-12 col-md-4 offset-md-2">
-                          <div class="form-group">
-                              <input id="range" name="range" type="number" pattern="[0-9]*" class="form-control bg-gray"
+ <div class="pb-5 bg-light" style="">
+     <!-- Job controller -->
+     <div class="container jobDetails pb-5 cards-section bg-white">
+         <form action="{{ url('jobs/searchjobs/results') }}">
+             <div class="row">
+                 <div class="col-md-12" style="">
+                     <form class="bg-light p-3">
+                         <div class="row">
+                             <div class="col-md-6">
+                                 <div class="form-row">
+                                     <div class="form-group col-md-4">
+                                         <label for="city" hidden="">City</label>
+                                         <input id="city" name="city" type="text" class="form-control"
+                                             placeholder="city" />
+                                     </div>
+                                     <div class="form-group col-md-4">
+                                         <label for="inputState" hidden="">State</label>
+                                         <select name="state" class="form-control" id="">
+                                             <option value="" selected="selected">Select a State</option>
+                                             <option value="AL">Alabama</option>
+                                             <option value="AK">Alaska</option>
+                                             <option value="AZ">Arizona</option>
+                                             <option value="AR">Arkansas</option>
+                                             <option value="CA">California</option>
+                                             <option value="CO">Colorado</option>
+                                             <option value="CT">Connecticut</option>
+                                             <option value="DE">Delaware</option>
+                                             <option value="DC">District Of Columbia</option>
+                                             <option value="FL">Florida</option>
+                                             <option value="GA">Georgia</option>
+                                             <option value="HI">Hawaii</option>
+                                             <option value="ID">Idaho</option>
+                                             <option value="IL">Illinois</option>
+                                             <option value="IN">Indiana</option>
+                                             <option value="IA">Iowa</option>
+                                             <option value="KS">Kansas</option>
+                                             <option value="KY">Kentucky</option>
+                                             <option value="LA">Louisiana</option>
+                                             <option value="ME">Maine</option>
+                                             <option value="MD">Maryland</option>
+                                             <option value="MA">Massachusetts</option>
+                                             <option value="MI">Michigan</option>
+                                             <option value="MN">Minnesota</option>
+                                             <option value="MS">Mississippi</option>
+                                             <option value="MO">Missouri</option>
+                                             <option value="MT">Montana</option>
+                                             <option value="NE">Nebraska</option>
+                                             <option value="NV">Nevada</option>
+                                             <option value="NH">New Hampshire</option>
+                                             <option value="NJ">New Jersey</option>
+                                             <option value="NM">New Mexico</option>
+                                             <option value="NY">New York</option>
+                                             <option value="NC">North Carolina</option>
+                                             <option value="ND">North Dakota</option>
+                                             <option value="OH">Ohio</option>
+                                             <option value="OK">Oklahoma</option>
+                                             <option value="OR">Oregon</option>
+                                             <option value="PA">Pennsylvania</option>
+                                             <option value="RI">Rhode Island</option>
+                                             <option value="SC">South Carolina</option>
+                                             <option value="SD">South Dakota</option>
+                                             <option value="TN">Tennessee</option>
+                                             <option value="TX">Texas</option>
+                                             <option value="UT">Utah</option>
+                                             <option value="VT">Vermont</option>
+                                             <option value="VA">Virginia</option>
+                                             <option value="WA">Washington</option>
+                                             <option value="WV">West Virginia</option>
+                                             <option value="WI">Wisconsin</option>
+                                             <option value="WY">Wyoming</option>
+                                         </select>
+                                     </div>
+                                     <div class="col text-center py-1">-OR- </div>
+                                     <div class="form-group col-md-3">
+                                         <label for="zip" hidden="">Zip</label>
+                                         <input id="zip" name="zip" type="number" pattern="[0-9]*" class="form-control" placeholder="zip code" />
+                                     </div>
+                                 </div>
+                                 <div class="form-group">
+                                     {# <select class="form-control">
+                                         <option value="Select A City Radius">Select A City Radius</option>
+                                     </select> #}
+                                     <input id="range" name="range" type="number" pattern="[0-9]*" class="form-control bg-gray"
                                   placeholder="range in miles" />
-                          </div>
-                      </div>
-                      <div class="col-sm-12 col-md-4">
-                      <button type="submit" value="Search" class="btn btn-lg search-jobs-btn"> <i class="fas fa-search"></i>
-                      Search Jobs</button>
-                      </div>
-                  </div>                  
-
-              </form>
-
-          </div>
-      </div>
-  </div>
+                                 </div>
+                             </div>                            
+                             <div class="col-md-6">
+                             {# Select Truck Type #}
+                                 <div class="form-group">
+                                     <select name="trucktype" class="form-control">
+                                        <option value="">Select truck type</option>
+                                        <option value="tanker">tanker</option>
+                                        <option value="van">van</option>
+                                        <option value="reefer">reefer</option>
+                                     </select>
+                                 </div>
+                                 {# Select Job Type #}
+                                 <div class="form-group">
+                                     <select name="jobtype" class="form-control">
+                                        <option value="">Select job type type</option>
+                                        <option value="otr">OTR</option>
+                                        <option value="regional">Regional</option>
+                                        <option value="dedicated">Dedicated</option>
+                                        <option value="local">Local</option>
+                                     </select>
+                                 </div>
+                             </div>
+                             <div class="col-md-4 offset-md-4">
+                                 <div class="form-group">
+                                     <button type="submit" value="Search" class="btn btn-primary btn-block"> 
+                                     <i class="fas fa-search"></i> Search</button>
+                                 </div>
+                             </div>
+                         </div>
+                     </form>
+                 </div>
+             </div>
+         </form>
+     </div>
+ </div>
