--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -6,6 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  {# HERE WE INCLUDE OUR SEO TEMPLATE #}
+  {% include "partials/_seo" %}
+
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -194,6 +198,7 @@
 							return params;
 						}
 </script>
+
 
   </head>
   {# utility-site-container is a utility class located in utility SCSS folder #}
