--- a/templates/index.twig
+++ b/templates/index.twig
@@ -6,18 +6,12 @@
 
 
 {# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE HOME PAGE  #}
-{# UP UNTILL THE FOOTER --> #}
-{% block main %}
+{# Testing out Matrices #}
 
-
-
-{% endblock %}
 
 {# VIDEO INCLUDES #}
 {% include "partials/_video" %}
 {% include "partials/_footer" %}
-
-
 
 
 
